--- a/User-CRUD-master/src/main/resources/application.properties
+++ b/User-CRUD-master/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #datasource 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://docker-mysql:3306/user
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/db1
 spring.datasource.username=user
 spring.datasource.password=password
 
